<resources>
    <string name="app_name">MedCamp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="near_by_hospitals">near_by_hospitals</string>
    <string name="appointments">appointments</string>
    <string name="request_blood">request_blood</string>
    <string name="see_blood_requests">see_blood_requests</string>
    <string name="scanner">scanner</string>
</resources>
