<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_nearBy"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/near_by_hospitals" />
        <item
            android:id="@+id/nav_appintments"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/appointments" />
        <item
            android:id="@+id/nav_see_blood_requests"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/see_blood_requests"/>
        <item
            android:id="@+id/nav_request_blood"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/request_blood"/>
        <item
            android:id="@+id/nav_scanner"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/scanner" />
    </group>

    <item android:title="Communicate">

        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>

</menu>
